--- a/Web.config
+++ b/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -123,6 +123,6 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    <add name="sgaEntities" connectionString="metadata=res://*/Models.SGABD.csdl|res://*/Models.SGABD.ssdl|res://*/Models.SGABD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BRIAN\SQLEXPRESS;initial catalog=sga;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  
+  <add name="sgaEntities" connectionString="metadata=res://*/Models.SGABD.csdl|res://*/Models.SGABD.ssdl|res://*/Models.SGABD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BRIAN\SQLEXPRESS;initial catalog=sga;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
