Se sube el panel con el sistema de roles

--- a/ProyectoFinal.csproj
+++ b/ProyectoFinal.csproj
@@ -346,7 +346,6 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
@@ -355,6 +354,7 @@
     <Content Include="Views\Shared\_Login.cshtml" />
     <Content Include="Views\Error\UnauthorizedOperation.cshtml" />
     <Content Include="Views\Panel\Index.cshtml" />
+    <Content Include="Views\Shared\_Paneles.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
