--- a/ProyectoFinal.csproj
+++ b/ProyectoFinal.csproj
@@ -235,6 +235,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -355,6 +356,11 @@
     <Content Include="Views\Error\UnauthorizedOperation.cshtml" />
     <Content Include="Views\Panel\Index.cshtml" />
     <Content Include="Views\Shared\_Paneles.cshtml" />
+    <Content Include="Views\Admin\Estudiantes.cshtml" />
+    <Content Include="Views\Admin\Docentes.cshtml" />
+    <Content Include="Views\Admin\Periodos.cshtml" />
+    <Content Include="Views\Admin\Materias.cshtml" />
+    <Content Include="Views\Admin\Admins.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
