Se cambia el  SGA entities por uno actualizado al servidor correspondiente

--- a/Web.config
+++ b/Web.config
@@ -122,7 +122,5 @@
     </providers>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-  <connectionStrings>
   
-  <add name="sgaEntities" connectionString="metadata=res://*/Models.SGABD.csdl|res://*/Models.SGABD.ssdl|res://*/Models.SGABD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BRIAN\SQLEXPRESS;initial catalog=sga;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
-</configuration>
+<connectionStrings><add name="sgaEntities" connectionString="metadata=res://*/Models.SGABD.csdl|res://*/Models.SGABD.ssdl|res://*/Models.SGABD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Brian;initial catalog=sga;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
