--- a/packages.config
+++ b/packages.config
@@ -49,6 +49,9 @@
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
+  <package id="System.Linq.Dynamic" version="1.0.8" targetFramework="net472" />
+  <package id="System.Linq.Dynamic.3.5" version="1.0" targetFramework="net472" />
+  <package id="System.Linq.Dynamic.Core" version="1.2.9" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
