Se añade un CRUD Docente completo para los admins, falta relacionar con los cursos o materias impartidas.

--- a/ProyectoFinal.csproj
+++ b/ProyectoFinal.csproj
@@ -299,6 +299,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SGABD.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\TableAdminDocentesVM.cs" />
     <Compile Include="Models\ViewModels\TableAdminEstudiantesVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
