--- a/ProyectoFinal.csproj
+++ b/ProyectoFinal.csproj
@@ -303,6 +303,8 @@
     <Compile Include="Models\sysdiagrams.cs">
       <DependentUpon>SGABD.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\TableAdminAcudientesVM.cs" />
+    <Compile Include="Models\ViewModels\TableAdminAdministradoresVM.cs" />
     <Compile Include="Models\ViewModels\TableAdminDocentesVM.cs" />
     <Compile Include="Models\ViewModels\TableAdminEstudiantesVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -379,6 +381,7 @@
     <Content Include="Views\Admin\Periodos.cshtml" />
     <Content Include="Views\Admin\Materias.cshtml" />
     <Content Include="Views\Admin\Admins.cshtml" />
+    <Content Include="Views\Admin\Acudientes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
