CRUD para los periodos academicos

--- a/ProyectoFinal.csproj
+++ b/ProyectoFinal.csproj
@@ -307,6 +307,7 @@
     <Compile Include="Models\ViewModels\TableAdminAdministradoresVM.cs" />
     <Compile Include="Models\ViewModels\TableAdminDocentesVM.cs" />
     <Compile Include="Models\ViewModels\TableAdminEstudiantesVM.cs" />
+    <Compile Include="Models\ViewModels\TableAdminPeriodosVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -397,6 +398,9 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
