--- a/Web.config
+++ b/Web.config
@@ -117,8 +117,8 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    
-  <add name="sgaEntities" connectionString="metadata=res://*/Models.SGABD.csdl|res://*/Models.SGABD.ssdl|res://*/Models.SGABD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BRIAN;initial catalog=sga;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="sgaEntities" connectionString="metadata=res://*/Models.SGABD.csdl|res://*/Models.SGABD.ssdl|res://*/Models.SGABD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BRIAN;initial catalog=sga;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
