--- a/ProyectoFinal.csproj
+++ b/ProyectoFinal.csproj
@@ -394,6 +394,7 @@
     <Content Include="Views\Admin\Clases.cshtml" />
     <Content Include="Views\Admin\VerClase.cshtml" />
     <Content Include="Views\Admin\EstudiantesClase.cshtml" />
+    <Content Include="Views\Admin\DocentesClase.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
