--- a/ProyectoFinal.csproj
+++ b/ProyectoFinal.csproj
@@ -395,6 +395,7 @@
     <Content Include="Views\Admin\VerClase.cshtml" />
     <Content Include="Views\Admin\EstudiantesClase.cshtml" />
     <Content Include="Views\Admin\DocentesClase.cshtml" />
+    <Content Include="Views\Admin\MateriasClase.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
